<resources>
    <string name="app_name">RentApp</string>
    <string name="rents">Rents</string>
    <string name="suv">SUV</string>
    <string name="sedan">SEDAN</string>
    <string name="coupe">COUPE</string>
    <string name="sport_car">SPORT CAR</string>
    <string name="station_wagon">STATION WAGON</string>
    <string name="convertible">CONVERTIBLE</string>
    <string name="minivan">MINIVAN</string>
    <string name="pickup_truck">PICKUP TRUCK</string>
    <string name="hatchback">HATCHBACK</string>
    <string name="all_cars">All Cars</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_in_or_sign_up">Log in or Sign up</string>
    <string name="login_signup">Log in/Sign up</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="hello_again">Hello Again!</string>
    <string name="welcome_back_login_to_continue">Welcome back, login to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="recover_password">Recover Password</string>
    <string name="or_continue_with">- Or continue with -</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="email">Email</string>
    <string name="welcome_back_sign_up_to_continue">Welcome back!! Sign up to continue</string>
    <string name="email_field_empty">Email field cannot be empty</string>
    <string name="username_field_empty">Username field can\'t be empty</string>
    <string name="password_empty">Password field can\'t be empty</string>
    <string name="password_too_small">Password too small</string>
    <string name="invalid_email">Invalid email</string>
    <string name="signed_in_sucessfully">Signed up successfully</string>
    <string name="fast_select">Fast Select</string>
    <string name="rent_the_car">Rent the car</string>
    <string name="favorite">Favorite</string>
    <string name="car_rented">Car Rented</string>
    <string name="make_sure_to_show_this_rentid_when_you_go_to_pick_up_the_car_you_can_always_find_it_in_your_rents_in_settings">Make sure to show this rentId when you go to pick up the car, you can always find it in your rents in settings</string>
    <string name="ok">OK</string>
    <string name="content">Content</string>
    <string name="favorites">Favorites</string>
    <string name="preferences">Preferences</string>
    <string name="allow_new_car_notifications">Allow new car notifications</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="other">Other</string>
    <string name="locate_us">Locate Us</string>
    <string name="log_out">Log Out</string>
    <string name="log_in_to_see_rent">Please log in to see you rents</string>
    <string name="no_internet_connection">Oops!! seems like you are not connected to the internet, connect and try again</string>
    <string name="rent_again">Rent Again</string>
    <string name="rent_details">Rent Details</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="log_in_first">Log in first</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="rent_settings">Rent Settings</string>
    <string name="view_all_rents">View All Rents</string>
    <string name="add_fast_rent_deals">Add Fast Rent Deals</string>
    <string name="car_settings">Car Settings</string>
    <string name="add_a_new_car">Add a new car</string>
    <string name="change_car_status">Change car status</string>
    <string name="remove_a_car">Remove a car</string>
    <string name="change_car_location">Change car location</string>
    <string name="location_settings">Location Settings</string>
    <string name="add_a_new_location">Add a new location</string>
    <string name="see_all_locations">See all locations</string>
    <string name="delete_location">Delete location</string>
    <string name="locations">Locations</string>
    <string name="locations_fragment_subtitle">Here you can see all locations</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="location_name">Location Name (Optional)</string>
    <string name="location_city">Location City (Optional)</string>
    <string name="title_activity_add_location">AddLocationActivity</string>
    <string name="location">Location</string>
    <string name="add_current_location">Add current location</string>
    <string name="add_location">Add Location</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_add_this_location">Are you sure you want to add this location?</string>
    <string name="add">Add</string>
    <string name="turn_on_location">Please turn on location</string>
    <string name="delete_location_subtitle">Swipe to delete a location</string>
    <string name="delete_locations_title">Delete locations</string>
    <string name="undo">Undo</string>
    <string name="add_car">Add Car</string>
    <string name="cached_car_upload_subtitle">Locally saved uploads</string>
    <string name="car_upload_chache_title">Add a car</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">finish</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_model">Car Model</string>
    <string name="car_type">Car Type</string>
    <string name="cardetails">Car Details</string>
    <string name="car_price_per_day">Car price per day</string>
    <string name="car_price">Car Price</string>
    <string name="select_a_location">Select a Location</string>
    <string name="car_location">Car Location</string>
    <string name="grant_permission_text">Grant</string>
    <string name="add_username">Add Username</string>
</resources>