<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.admin_settings.AdminSettingsFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GrayishColor"
                android:padding="10dp"
                android:text="@string/rent_settings"
                android:textColor="@color/TabLayoutTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/View_All_Rents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/view_all_rents"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_directions_car_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />


            <TextView
                android:id="@+id/CarSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GrayishColor"
                android:padding="10dp"
                android:text="@string/car_settings"
                android:textColor="@color/TabLayoutTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/View_All_Rents" />


            <TextView
                android:id="@+id/AddNewCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/add_a_new_car"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_playlist_add_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CarSettings" />

            <TextView
                android:id="@+id/ContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/change_car_status"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_car_crash_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AddNewCar" />

            <TextView
                android:id="@+id/LocateUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/remove_a_car"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_delete_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ContactUs" />

            <TextView
                android:id="@+id/ChangeCarLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/change_car_location"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_edit_location_alt_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LocateUs" />

            <TextView
                android:id="@+id/LocationSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GrayishColor"
                android:padding="10dp"
                android:text="@string/location_settings"
                android:textColor="@color/TabLayoutTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ChangeCarLocation" />

            <TextView
                android:id="@+id/AddLocations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/add_a_new_location"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_add_location_alt_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LocationSettings" />

            <TextView
                android:id="@+id/SeeLocations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/see_all_locations"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AddLocations" />

            <TextView
                android:id="@+id/DeleteLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/delete_location"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_wrong_location_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SeeLocations" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>