<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.admin_settings.add_car_fragments.CarDetailsFragment">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/cardetails"
        android:textColor="@color/TabLayoutTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/CarBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/car_brand"
        android:textColor="@color/black"
        android:textColorHint="@color/BlueColor"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="40dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/BlueColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">


        <EditText
            android:id="@+id/car_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_edit_text_bg"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/CarModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/car_model"
        android:textColor="@color/black"
        android:textColorHint="@color/BlueColor"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="20dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/BlueColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CarBrand">


        <EditText
            android:id="@+id/car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_edit_text_bg"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/CarType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/car_type"
        android:textColor="@color/black"
        android:textColorHint="@color/BlueColor"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="20dp"
        app:hintTextColor="@color/BlueColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CarModel">


        <EditText
            android:id="@+id/car_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_edit_text_bg"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_profile_button_press"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawablePadding="15dp"
        android:paddingHorizontal="15dp"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="visible"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/edit_profile_button_press"
        android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
        android:drawablePadding="15dp"
        android:paddingHorizontal="15dp"
        android:text="@string/back"
        android:drawableTint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>